config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deployment
spec:
  selector:
    matchLabels:
      app: go-rest-api
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: go-rest-api
    spec:
      containers:
        - name: go-rest-api
          image: pkbhowmick/go-rest-api:latest
          ports:
            - containerPort: 8080
